--- a/StudentPortal/src/main/resources/application.properties
+++ b/StudentPortal/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+
